Adding register email validation and gathering
